# snakemake-pixi-template

./: .gitignore  LICENSE  README.md  Snakefile  log.json  log_handler.py  pyproject.toml
