[project]
name = "snakemake_pixi"
version = "0.1.0"

[tool.pixi.project]
name = "snakemake_pixi"
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.dependencies]
snakemake = "==7.32.4"
snakefmt = ">=0.10.0,<0.11"

[tool.pixi.tasks]
dryrun = "snakemake --dry-run"
snake = "snakemake --cores 1"
dag = "snakemake -F --dag | dot -Tsvg > resources/dag.svg"
rulegraph = "snakemake -F --rulegraph | dot -Tsvg > resources/rulegraph.svg"
filegraph = "snakemake -F --filegraph | dot -Tsvg > resources/filegraph.svg"
graphs = { depends_on = ["dag", "rulegraph", "filegraph"] }
fmt = "snakefmt ."


[tool.snakefmt]
line_length = 90
include = '\.smk$|^Snakefile|\.py$'

